Deleted not required file, and fixed image issue on small screen

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -12,6 +12,7 @@ html {
 }
 body {
   margin: 0;
+  padding-top:50px;
 }
 article,
 aside,
@@ -86,6 +87,8 @@ sub {
 }
 img {
   border: 0;
+  max-width: 100%;
+  height: auto;
 }
 svg:not(:root) {
   overflow: hidden;
